
version 1.0.2.99 (cvs)

        - building against meanwhile 0.4.0 cvs
	
	- slightly better handling of server_alias data from loading of
	buddy list from server

	- patch #1076834 Away/available state and debug logging
	
version 1.0.2 (2004-11-09)
	
	- fix #1054818 html/xml tags in group chats
	
	- fix a really stupid bug preventing the adding of new buddies.

	- adds protocol action to set active message

version 1.0.1 (2004-10-15)

	- fix #1045727 gaim crash in mwgaim.c:mw_read_callback after
	disconnect

	- fix #1043849 CPU at 100% on reconnect
	
	- patch #1034727 Add mw_chat_name

	- patch #1044218 Gaim_normalize called for meanwhile: add
	mw_normalize

version 1.0.0 (2004-09-18)

	- version change to match Gaim, because that's what we do

	- g_log calls for meanwhile and mwgaim no longer result in a DOS
	console under win32

version 0.82 (2004-08-26)
	
	- updates to prpl structure as per Gaim API change

	- joining a conference no longer shows a "joined" message for
	existing conference members

	- receiving html-like text is now displayed correctly verbatim

	- added support for compiling using a linux/mingw cross compiler
	
version 0.81 (2004-08-06)

	- Changed away status handling to strip the HTML from the away
	message, making multi-line messages display correctly.
	
	- Changed all logging to gaim_debug calls (patch by Stephen
	Dawkins)
	
version 0.80  Chris O'Brien  <siege@preoccupied.net>

	2004-07-18: Essentially the same as 0.79-1 with some minor changes
	to the preferences to make use of the new INFO preference to
	display the use warning. Still for use against Meanwhile 0.3
	
version 0.79  Chris O'Brien  <siege@preoccupied.net>

	2004-06-26: Fixed a crash bug, and added the ability to store
	buddy lists back on the server.
	
	2004-06-23: The server-side buddy list is now imported on
	login. Had to work around an apparent bug in the mw_add_buddy
	call, in that the GaimGroup param was sometimes NULL. This caused
	much consternation.
	